tdf#130760 Fix crash when clicking link to other slide

Change-Id: Ie8b0cfb852fe1abc49b80b1d2d9d2c3be1241701
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/89332
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>